<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Heart</string>
    <string name="action_settings">Settings</string>
    <string name="phone_label">Please enter your 10 digit phone number</string>
    <string name="button_phone_label">Submit</string>	
    <string name="title_section1">VITALS</string>
    <string name="title_section2">SYMPTOMS</string>
    <string name="title_section3">REMINDERS</string>
    <string name="title_section4">CHART</string>
    <string name="title_section5">INPUT</string>
    <string name="title_section6">CHAT</string>
     <string name="title_section7">Device Setting</string>
    <string name="weight_label">Weight 120 lb</string>
	<string name="looking_for_tracks">Looking for information...</string>
	<string name="sending">Sending...</string>
    <string name="msglbl">"Message : "</string>
    
	<string name="pressure_label">Blood Pressure 120/80 mmHg</string>

	<string name="bmi_label">BMI 30 </string>

	<string name="glucose_label">Glucose 144 mg/dl</string>
	
    <string name="heart_rate_label">Heart Rate 60–100 bpm</string>
	
    
    <string name="lastSympInfo_label"> </string>
    <string name="q_label">During the last 24 hours have you been: </string>
	<string name="q1_label">Q1:Feeling pain in your chest?</string>	
	<string name="chest_pain_slider_text"></string>
	<string name="max_short_breathe_text"></string>
	<string name="breathe_pain_text"></string>
	<string name="swallow_feet_text"></string>
	<string name="fatigue_text"></string>	
	<string name="q2_label">Q2: Waking up at night because you could not breathe?</string>
	<string name="q3_label">Q3: Feeling more tired than usual?</string>
	<string name="q4_label">Q4: Having short of breath ?</string>
	<string name="q5_label">Q5: Having your feet more swollen than usual?</string>
	<string name="q6_label">Q6: Did you take your medication?</string>
	<string name="med_yes_radio">Yes</string>
	<string name="med_no_radio">No</string>
	<string name="symptoms_submit_button">Submit</string>
	<string name="weight_input_label">Weight in Bounds</string>
	<string name="pressure_input_label">Blood Pressure</string>
	<string name="glucose_input_label">Glucose</string>
	<string name="heart_rate_input_label">Heart Rate</string>
	<string name="vital_input_submit">Submit</string>	
	<string name="glucose_info_label"></string>
	
	<string name="comment_input_label">More Information</string>
	<string name="comment_textedit_text"></string>
	
	
	
</resources>
